# server-core

./: .gitignore  CMakeLists.txt  README.md
cmake/: BoostSettings.cmake  ProjectSettings.cmake
include/servercore/: server.h
src/: connection.cpp  connection.h  connectionmanager.cpp  connectionmanager.h  coreutility.cpp  coreutility.h  macros.h  pch.h  server.cpp  servercore_version.cpp.in  servercore_version.h  worker.cpp  worker.h
